vlib/v/parser/tests/embed_pub_mut_err.vv
struct Context {}

struct App {
pub mut:
	Context
}

fn main() {
}
